recursion.logo.square.FourSquare.scala.error
Compilation error:
FourSquare:3: error: identifier expected but ')' found.
  forward(100.)
              ^